Added a few nice assertiosn.